deps/v8/test/message/fail/class-fields-private-undefined-inner-class.out
*%(basename)s:8: SyntaxError: Private field '#b' must be declared in an enclosing class
      getA() { return this.#b; }
                          ^
SyntaxError: Private field '#b' must be declared in an enclosing class
